# diffusion-curvature

./: .gitignore  README.md  pixi.toml  pyproject.toml  settings.ini
.zetteldev/: new_experiment.sh
_ARCHIVES/: pixi.toml.backup  testing-marimo.py
_proc/: 0a-Atoms.ipynb  0b-Baselines.ipynb  0d-Data.ipynb  0g-Guide.ipynb  2-Toy-Manifolds-Benchmark.ipynb  3-Sampling-Resilience.ipynb  3c-effects-of-graph-construction.ipynb  4b-hickock-curvature-of-battery.ipynb  5-sign-prediction-tests.ipynb  5a-kernel-bandwidth-effects-on-negative-curvature-detection.ipynb  5b-hickok-sign-prediction-tests.ipynb  6-scalar-curvature-by-volume-comparisons.ipynb  6a-Volume-Estimation-with-heat-diffusion.ipynb  curvature-filtrations.ipynb  nbdev.yml  sidebar.yml
diffusion_curvature/: 5_sign_prediction.py  _modidx.py  clustering.py  comparison_space.py  compute_mean_flat_entropies.py  construct_battery.py  core.py  core_beta.py  core_keops.py  datasets.py  diffusion_laziness.py  diffusion_trajectories.py  distances.py  graphs.py  heat_diffusion.py  heatkernel.py  kernels.py  local_distance_scaling.py  normalizing_flows.py  parameter_sensitivity.py  random_surfaces.py  ricci.py  sadspheres.py  sampling_distance.py  self_evaluating_datasets.py  utils.py  vne.py
docs/: search.json  sitemap.xml
nbs/: .experiment_template.ipynb  0a-Atoms.ipynb  0a0-Kernels.ipynb  0a1-Graphs.ipynb  0a2-Heat-Diffusion.ipynb  0b-Baselines.ipynb  0b1-hickock-curvature.ipynb  0b2-zhang-principal-curvature.ipynb  0b3-Ollivier-Ricci-and-Forman-Ricci.ipynb  0c1a-Diffusion-Laziness.ipynb  0c2-Comparison-Space-Construction.ipynb  0c2a-Mean-Flat-Entropies.ipynb  0d-Data.ipynb  0d2a-Random-Surfaces.ipynb  0d3-saddle-sphere-ablations.ipynb  0e-Errata.ipynb  0e1-self-evaluating-datasets.ipynb  1-Curvature-Enhanced-Spectral-Clustering.ipynb  1-curvatures-visualized.py  2-Toy-Manifolds-Benchmark.ipynb  3-Sampling-Resilience.ipynb  3a-are-kernels-zeitgeibers.ipynb  3c-effects-of-graph-construction.ipynb  3d-diffusion-trajectory-distance-normalization.ipynb  4a-curvature-colosseum-with-diffusion-curvature.ipynb  4b-hickock-curvature-of-battery.ipynb  5-sign-prediction-tests.ipynb  5a-kernel-bandwidth-effects-on-negative-curvature-detection.ipynb  5c-Ollivier-Ricci-and-Foreman-Sign-Prediction-Tests.ipynb  6-scalar-curvature-by-volume-comparisons.ipynb  9-single-cell-results.ipynb  _quarto-production.yml  _quarto.yml  diffusion-trajectory-distance-normalization.ipynb  index.ipynb  parameter-sensitivity-tests.ipynb  sidebar.yml  single-cell-results.ipynb
nbs/_ARCHIVES/src-old/: pyproject.toml
nbs/_ARCHIVES/src-old/diffusion_curvature_backup/: compute_mean_flat_entropies.py  datasets.py  diffusion_laziness.py  graphs.py  heatkernel.py  hickok.py  laziness.py  mioflow.py  mioflow_quicktrain.py
nbs/_ARCHIVES/src-old/diffusion_curvature_backup/pyg/: diffusion.py
nbs/_ARCHIVES/src-old/diffusion_curvature_backup/ricci/: rays.py
paper/: _quarto.yml  index-ricci.embed.ipynb  index-ricci.out.ipynb  index.aux  index.html  index.qmd  index.tex  references.bib
results/: ipsc_diffusion_curvature.npy  ipsc_diffusion_curvature_global_dim.npy  toy_data_saved.npz  toy_data_saved_1000.npz  toy_data_saved_1000_more_noise.npz  toy_data_saved_1000_more_noise_curvatures.npz  toy_data_saved_2000.npz  toy_dataset_diffusion_curvature.npz  toy_dataset_diffusion_integration_curvature.npz  toy_dataset_entropic_fixed_subtraction.npz  toy_dataset_neurips_laziness_no_comparison.npz  toy_dataset_toy_datasets_forman_curvature.npz  toy_dataset_toy_datasets_forman_ricci_k_50.npz  toy_dataset_toy_datasets_hickock_curvature_r2.npz  toy_dataset_toy_datasets_hickock_curvature_r3.14.npz  toy_dataset_toy_datasets_ollivier_curvature_a0.5.npz  toy_dataset_toy_datasets_ollivier_ricci_knn_50.npz  toy_dataset_toy_datasets_principal_curvature.npz  toy_dataset_toy_datasets_principal_curvature_heuristic.npz  toy_dataset_toy_datasets_principal_curvature_heuristic_filtered.npz  toy_dataset_toy_datasets_principal_curvature_no_heuristic.npz  toy_dataset_toy_datasets_principal_curvature_no_heuristic_08_15.npz  toy_dataset_wasserstein_fixed_ollivier.npz  toy_dataset_wasserstein_subtraction.np.npz  toy_datasets_ground_truth_curvatures.npz  toy_datasets_ground_truth_curvatures_1000.npz  toy_datasets_ground_truth_curvatures_2000.npz
(+227 files in other folders)
