[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion_curvature"
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.setuptools]
zip-safe = true
# package_dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
# include = ["diffusion_curvature*"]  # package names should match these glob patterns (["*"] by default)
# exclude = ["diffusion_curvature.tests*"]  # exclude packages matching these glob patterns (empty by default)
# namespaces = false  # to disable scanning PEP 420 namespaces (true by default)